src/test/ui/error-codes/E0586.stderr
error[E0586]: inclusive range with no end
  --> $DIR/E0586.rs:13:22
   |
13 |     let x = &tmp[1..=]; //~ ERROR E0586
   |                      ^
   |
   = help: inclusive ranges must be bounded at the end (`..=b` or `a..=b`)

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0586"
